--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "jquery": "^3.4.1",
     "socket.io": "^2.3.0",
-    "jquery": "^3.4.1"
+    "uuid": "^8.3.2"
   }
 }
